# sachy3

./: CMakeLists.txt
sachy3/: CMakeLists.txt  pohyby.cpp  pohyby.h  sachovnice.cpp  sachovnice.h  sachy3.cpp  sachy3.h  ui.cpp  ui.h
